# fleetpull

./: .gitignore  AUDIT.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  ENDPOINTS.md  GEOTAB-AUDIT.md  README.md  ROADMAP.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: run_geotab_devices.py  run_geotab_exception_events.py  run_geotab_trips.py  run_geotab_users.py  run_motive_driving_idle.py  run_samsara_vehicles.py  run_vehicle_locations.py  run_vehicles_snapshot.py
src/fleetpull/: __init__.py  cli.py  exceptions.py
src/fleetpull/api/: __init__.py  auth_ingress.py  catalog.py  fetch.py  identity.py  sync.py
src/fleetpull/config/: __init__.py  base.py  composition.py  example.py  geotab.py  http.py  loader.py  loading.py  logger.py  motive.py  provider.py  providers.py  rate_limit.py  resolution.py  retry.py  root.py  sections.py  state.py  storage.py  sync.py
src/fleetpull/endpoints/: __init__.py  base.py  registry.py
src/fleetpull/incremental/: __init__.py  cursor.py  resolution.py  resume.py  seed.py  window.py
src/fleetpull/logger/: __init__.py  setup.py
src/fleetpull/model_contract/: __init__.py  coercions.py  response.py
src/fleetpull/models/: __init__.py  base.py
src/fleetpull/network/: __init__.py  truststore_context.py
src/fleetpull/orchestrator/: __init__.py  backfill.py  batch.py  bisection.py  drivers.py  entry.py  executors.py  fanout.py  feed_drive.py  metadata_projection.py  outcome.py  recording.py  resume.py  roster_harvest.py  roster_refresh.py  runner.py  shape_resolution.py  spine.py  streaming.py  unit_loop.py  watermark_drive.py
src/fleetpull/paths/: __init__.py  datasets.py  partitions.py  resolution.py
src/fleetpull/polars_typing/: __init__.py
src/fleetpull/records/: __init__.py  convert.py  dataframe.py  event_time.py  fan_out_keys.py  fields.py  flatten.py  roster_members.py  schema.py  validation.py
src/fleetpull/resources/: __init__.py  config.example.yaml
src/fleetpull/roster/: __init__.py  definition.py  key.py  registry.py
src/fleetpull/state/: __init__.py  cursors.py  database.py  migrations.py  reconcile.py  rosters.py  run_ledger.py  work_units.py
src/fleetpull/storage/: __init__.py  append.py  atomic.py  files.py  frames.py  layout.py  merge.py  metadata.py  partition.py  partitioned.py  partitioning.py  persist.py  pruning.py  read.py  result.py  single_file.py  splitting.py  staging.py  writers.py
src/fleetpull/timing/: __init__.py  canon.py  clock.py  codec.py  sleeper.py
tests/: __init__.py  conftest.py  geotab_annotation_logs_capture.py  geotab_audits_capture.py  geotab_devices_capture.py  geotab_driver_changes_capture.py  geotab_duty_status_logs_capture.py  geotab_dvir_logs_capture.py  geotab_exception_events_capture.py  geotab_fault_data_capture.py  geotab_feed_pages.py  geotab_fill_ups_capture.py  geotab_fuel_and_energy_used_capture.py  geotab_fuel_tax_details_capture.py  geotab_log_records_capture.py  geotab_media_files_capture.py  geotab_shipment_logs_capture.py  geotab_status_data_capture.py  geotab_text_messages_capture.py  geotab_trips_capture.py  geotab_users_capture.py  motive_driver_idle_rollups_capture.py  motive_driving_periods_capture.py  motive_groups_capture.py  motive_idle_events_capture.py  motive_users_capture.py  motive_vehicle_utilizations_capture.py  samsara_addresses_capture.py  samsara_asset_locations_capture.py  samsara_driver_fuel_energy_reports_capture.py  samsara_driver_vehicle_assignments_capture.py  samsara_drivers_capture.py  samsara_engine_states_capture.py  samsara_gps_readings_capture.py  samsara_idling_events_capture.py  samsara_odometer_readings_capture.py  samsara_trips_capture.py  samsara_vehicle_fuel_energy_reports_capture.py  samsara_vehicles_capture.py  test_cli.py  (+4 more)
tests/api/: __init__.py  conftest.py  test_auth_ingress.py  test_catalog.py  test_exposure_gate.py  test_fetch.py  test_sync.py
tests/config/: __init__.py  test_example.py  test_geotab.py  test_http.py  test_loader.py  test_logger.py  test_motive.py  test_providers.py  test_rate_limit.py  test_resolution.py  test_retry.py  test_root.py  test_sections.py  test_state.py  test_storage.py  test_sync.py
tests/endpoints/: __init__.py  test_base.py  test_endpoint_contract.py  test_registry.py  test_roster_discipline.py
tests/incremental/: __init__.py  test_cursor.py  test_resolution.py  test_resume.py  test_seed.py  test_window.py
tests/logger/: __init__.py  test_setup.py
tests/model_contract/: __init__.py  test_coercions.py  test_response.py
tests/models/: __init__.py  test_base.py
tests/network/: __init__.py  test_truststore_context.py
tests/orchestrator/: __init__.py  doubles.py  serial_executor.py  test_backfill.py  test_batch.py  test_bisection.py  test_drivers.py  test_entry.py  test_executors.py  test_fanout.py  test_resume.py  test_roster_harvest.py  test_roster_refresh.py  test_runner.py  test_runner_feed.py  test_runner_units.py  test_shape_resolution.py  test_streaming.py  test_threaded_fanout.py  test_unit_loop.py
tests/paths/: __init__.py  test_datasets.py  test_partitions.py  test_resolution.py
tests/records/: __init__.py  test_convert.py  test_dataframe.py  test_event_time.py  test_fan_out_keys.py  test_fields.py  test_flatten.py  test_roster_members.py  test_schema.py  test_validation.py
tests/roster/: __init__.py  test_definition.py  test_key.py  test_registry.py
tests/state/: __init__.py  conftest.py  test_cursors.py  test_database.py  test_migrations.py  test_reconcile.py  test_rosters.py  test_run_ledger.py  test_work_units.py
tests/storage/: __init__.py  test_append.py  test_atomic.py  test_files.py  test_frames.py  test_layout.py  test_merge.py  test_metadata.py  test_partition.py  test_partitioning.py  test_persist.py  test_pruning.py  test_read.py  test_result.py  test_splitting.py  test_staging.py  test_writers.py
tests/timing/: __init__.py  test_canon.py  test_clock.py  test_codec.py  test_sleeper.py
tests/vocabulary/: __init__.py  test_provider.py  test_quota_scope.py  test_response_category.py
(+311 files in other folders)
