# pyproject.toml

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

###############################################################################
# [project] - CORE PACKAGE METADATA
###############################################################################
[project]
name = "fleetpull"
version = "0.1.0"
description = "Pull fleet telematics data from provider APIs (Motive, Samsara, GeoTab) into typed polars DataFrames and parquet: retrieval, dtype coercion, and light structural normalization — no assumed end use."
readme = "README.md"
authors = [{ name = "Andrew Jordan", email = "andrewjordan3@gmail.com" }]
maintainers = [{ name = "Andrew Jordan", email = "andrewjordan3@gmail.com" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "telematics",
    "fleet",
    "motive",
    "samsara",
    "geotab",
    "polars",
    "api-client",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

# Core runtime dependencies
dependencies = [
    "httpx>=0.27.0",
    "polars>=1.0.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.0",
    "truststore>=0.9.0",
    "tzdata>=2025.2",
]

# Python version requirements
requires-python = ">=3.12"

# Optional dependency groups
[project.optional-dependencies]
# Mirrored from ``[dependency-groups].dev`` (PEP 735) so that
# ``pip install -e '.[dev]'`` works for contributors who are not on
# ``uv``. Both sections must stay in sync — pip ≥ 25.x can read
# ``--group dev`` directly, but older pip and the bare ``.[dev]`` extras
# syntax need this mirror. ``uv sync --group dev`` continues to use the
# PEP 735 section below.
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "import-linter>=2.0",
    "types-pyyaml",
]

[dependency-groups]
# Development dependencies
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "import-linter>=2.0",
    "types-pyyaml",
]

# Project URLs
[project.urls]
Homepage = "https://github.com/andrewjordan3/fleetpull"
Repository = "https://github.com/andrewjordan3/fleetpull"
Issues = "https://github.com/andrewjordan3/fleetpull/issues"

###############################################################################
# [tool.setuptools] - PACKAGE DISCOVERY
###############################################################################
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fleetpull*"]
exclude = ["tests*", "docs*"]

# Ship the PEP 561 marker file so external mypy / pyright runs honor the
# in-package type annotations instead of treating every import as ``Any``.
[tool.setuptools.package-data]
fleetpull = ["py.typed"]

###############################################################################
# [tool.ruff] - LINTING AND FORMATTING
###############################################################################
[tool.ruff]
line-length = 88
target-version = "py312"

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "D100", # pydocstyle: missing module docstring
    "D101", # pydocstyle: missing class docstring
    "D102", # pydocstyle: missing method docstring
    "D103", # pydocstyle: missing function docstring
    "DTZ",  # flake8-datetimez (no naive datetimes — all event time is UTC)
    "T10",  # flake8-debugger
    "T20",  # flake8-print (no print in production code)
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "PL",   # pylint
    "RUF",  # ruff-specific rules
    "PGH",  # pygrep-hooks (requires error code for type ignores)
    "G",    # flake8-logging-format (Enforces lazy logging %s over f-strings)
    "N",    # pep8-naming
    "PT",   # flake8-pytest-style (Test suite consistency)
    "S101", # flake8-bandit: asserts are forbidden in production code
]

ignore = [
    "E501", # Line too long (handled by ruff format)
    "E203", # Whitespace before ':' (conflicts with formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["fleetpull"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
# Test files routinely compare against literal expected values.
# Requiring named constants for every one of those would obscure intent
# without improving correctness — the standard pytest convention.
# Asserts are the pytest mechanism, so S101 lifts in tests only.
# Docstring presence (D) is enforced in src/ only: test names are the
# documentation convention there.
"tests/**" = ["PLR2004", "S101", "D"]
# A hand-run driver script's stdout IS its interface, so print (T20) is its
# legitimate output mechanism, not the production-logging smell the rule guards.
"scripts/**" = ["T20"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

###############################################################################
# [tool.mypy] - STATIC TYPE CHECKING
###############################################################################
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

###############################################################################
# PYRIGHT - FOR VS CODE PYLANCE
###############################################################################
[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "**/.*", ".venv"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false

###############################################################################
# PYTEST - TESTING
###############################################################################
[tool.pytest.ini_options]
testpaths = ["tests", "src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--doctest-modules",
]

###############################################################################
# COVERAGE
###############################################################################
[tool.coverage.run]
source = ["src/fleetpull"]
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

###############################################################################
# IMPORT-LINTER - IMPORT-DISCIPLINE GUARD (the carve's layering; clauses
# 1/3/4 are enforced tree-wide by tests/test_import_discipline.py)
###############################################################################
[tool.importlinter]
root_package = "fleetpull"

[[tool.importlinter.contracts]]
name = "Contract surface sits below its implementations, vocabulary below it"
type = "layers"
layers = [
    "fleetpull.network.classifiers | fleetpull.network.decoders | fleetpull.network.client",
    "fleetpull.network.contract",
    "fleetpull.vocabulary",
]

[[tool.importlinter.contracts]]
name = "Contract surface is independent of the auth package"
type = "forbidden"
source_modules = ["fleetpull.network.contract"]
forbidden_modules = ["fleetpull.network.auth"]

[[tool.importlinter.contracts]]
name = "Provider classifiers are independent of each other"
type = "independence"
modules = [
    "fleetpull.network.classifiers.geotab",
    "fleetpull.network.classifiers.motive",
    "fleetpull.network.classifiers.samsara",
]

[[tool.importlinter.contracts]]
name = "Provider decoders are independent of each other"
type = "independence"
modules = [
    "fleetpull.network.decoders.geotab",
    "fleetpull.network.decoders.motive",
    "fleetpull.network.decoders.samsara",
    "fleetpull.network.decoders.single_page",
]

[[tool.importlinter.contracts]]
name = "Root vocabulary and exceptions import nothing from network"
type = "forbidden"
source_modules = ["fleetpull.vocabulary", "fleetpull.exceptions"]
forbidden_modules = ["fleetpull.network"]

[[tool.importlinter.contracts]]
name = "Models, the network contract, and incremental are independent same-tier carriers"
type = "layers"
layers = [
    "fleetpull.endpoints",
    "fleetpull.models | fleetpull.network.contract | fleetpull.incremental",
    "fleetpull.vocabulary | fleetpull.model_contract",
]

[[tool.importlinter.contracts]]
name = "The package-wide vertical: every top-level package sits in its layer"
type = "layers"
layers = [
    # api is its own tier above the orchestrator, not a sibling: sync
    # (roadmap item 6) lands in api and composes the orchestrator entry,
    # which same-tier independence would forbid.
    "fleetpull.api",
    "fleetpull.orchestrator",
    "fleetpull.storage",
    "fleetpull.endpoints | fleetpull.records | fleetpull.state",
    "fleetpull.models | fleetpull.network",
    "fleetpull.logger",
    "fleetpull.config | fleetpull.roster",
    "fleetpull.exceptions",
    "fleetpull.vocabulary | fleetpull.incremental | fleetpull.timing | fleetpull.model_contract | fleetpull.polars_typing | fleetpull.paths",
]

[[tool.importlinter.contracts]]
name = "Orchestrator never touches the rate limiter directly"
type = "forbidden"
source_modules = ["fleetpull.orchestrator"]
forbidden_modules = ["fleetpull.network.limits"]
# Direct imports only: the client legitimately consults the limiter
# internally (network/client/runtime.py) -- that transitive path through
# fleetpull.network.client is fine. Only orchestrator reaching past the
# client's face to import the limiter itself is forbidden (§7).
allow_indirect_imports = true
